--- a/src/components/Achievements/Achievements.module.scss
+++ b/src/components/Achievements/Achievements.module.scss
@@ -1,3 +1,32 @@
 .achievements {
-    width: 100%;
+  width: 100%;
+  display: flex;
+  padding: 90px 200px;
+  margin: auto;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  background-color: #34547A;
+}
+
+.elements {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  img {
+    width: 30%;
+  }
+}
+
+.text__item {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+
+  p {
+    margin-bottom: 10px;
+  }
 }
