Добавил страницу проектов, реализовал progress icons

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,8 @@
   width: 100%;
   display: flex;
   background-color: #34547a;
-  padding: 80px 180px;
+  padding: 60px 180px;
+  margin-top: auto;
   color: white;
 }
 
