--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -21,8 +21,9 @@
   display: flex;
   align-items: center;
   a {
-    margin-left: 12px;
+    margin-right: 12px;
     text-decoration: none;
+    font-size: 15px;
     color: rgba(0, 0, 0, 1);
     transition-duration: 0.3s;
 
