--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -41,7 +41,7 @@
 
 .project__details {
   width: 100%;
-  line-height: 30px;
+  line-height: 35px;
   font-weight: 200;
   margin-bottom: 35px;
   li {
@@ -49,6 +49,7 @@
   }
   span {
     margin-bottom: 10px;
+    font-weight: 600;
   }
 }
 
