--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -10,9 +10,13 @@
 .project {
   box-shadow: -16px -2px 18px -11px rgba(34, 60, 80, 0.2);
   width: 400px;
+  height: 610px;
   background-color: rgba(238, 239, 241, 1);
   padding: 60px 50px;
   margin-bottom: 75px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   position: relative;
   transition-duration: 0.3s;
   top: 0;
@@ -43,6 +47,7 @@
   width: 100%;
   line-height: 35px;
   font-weight: 200;
+  justify-content: space-between;
   margin-bottom: 35px;
   li {
     list-style-type: none;
