--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -17,18 +17,32 @@
     font-size: 35px;
     width: 48%;
     display: flex;
-    color: #34547A;
+    color: #34547a;
     justify-content: left;
     margin-bottom: 30px;
     font-weight: 400;
   }
 
-  span {
-      font-size: 16px;
-      display: flex;
-      width: 48%;
-      margin-bottom: 2px;
-      justify-content: left;
+  button {
+    font-size: 16px;
+    border: none;
+    background-color: #34547a;
+    padding: 10px 5px;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    width: 48%;
+    margin-bottom: 2px;
+    transition-duration: 0.3s;
+    cursor: pointer;
+    justify-content: left;
+
+    &:disabled {
+      color: #555555;
+      background-color: #dddddd;
+      transition-duration: 0.3s;
+      cursor: not-allowed;
+    }
   }
 }
 
